languages/CNNArchLang/src/test/resources/valid_tests/LargeMemoryNetwork.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture LargeMemoryNetwork{
    def input Z(0:255)^{128} data
    def output Q(0:1)^{33} softmax

    data ->
    LargeMemory(subKeySize=50, k=10) ->
    FullyConnected(units=33) ->
    Softmax() ->
    softmax;
}