languages/CNNArchLang/src/test/resources/invalid_tests/UnknownMethod.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture UnknownMethod(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in1
    def output Q(0:1)^{classes} out1

    in1 ->
    FllyConnected(units=64, no_bias=true) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    Softmax() ->
    out1;
}
